# FirmwareFlashingTool

./: .eslintrc.json  .gitignore  .releaserc  CHANGELOG.md  LICENSE  README.md  example.code-workspace  firmwareflasher.code-workspace  index.html  make_release.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  pyproject.toml  tailwind.config.cjs  tailwind.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml
.github/scripts/: prepareCMD.sh  setup-linux.sh  setup-mac.sh  setup-windows.ps1
.github/workflows/: build-prod.yml  build.yml  test-build-only.yml
.storybook/: main.ts  preview.ts
src/: App.tsx  index.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/crates/linux/: Cargo.toml
src-tauri/crates/macos/: Cargo.toml
src-tauri/crates/windows/: Cargo.toml
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/lib/api/: Cargo.toml  index.ts  package.json  tauri-plugin-request-client.ts  tsconfig.json
src-tauri/src/lib/api/src/: lib.rs
src-tauri/src/lib/esp/: Cargo.toml
src-tauri/src/lib/esp/src/: api.rs  command.rs  lib.rs  manifest.rs  state.rs
src-tauri/src/lib/etvr_backend_module/: Cargo.toml
src-tauri/src/lib/etvr_backend_module/src/: client.rs  commands.rs  constants.rs  lib.rs  state.rs
src-tauri/src/lib/util/: Cargo.toml
src-tauri/src/lib/util/src/: colors.rs  errors.rs  lib.rs  logger.rs  prelude.rs
src-tauri/src/modules/: etvr_backend_client.rs  init_etvr_backend.rs  initialize_etvr_backend.rs  mdns_query.rs  menu.rs  mod.rs  tauri_commands.rs
src/Animation/: index.tsx
src/Services/canvas/: index.ts
src/Services/esp/: index.ts
src/Services/etvr/: api.ts  connection.ts  controller.ts  index.ts
src/Services/httpClient/: index.ts
src/Services/persistentStore/: index.ts
src/assets/js/: custom.js
src/common/: theme.ts  typography.ts
src/components/: CloseIcon.tsx  ConfigButton.tsx  CustomButton.tsx  CustomPopOver.tsx  CustomSlideAnimation.tsx  DownloadAssetsButton.tsx  EraseButton.tsx  GithubIcon.tsx  Highlight.tsx  OpenDocs.tsx  WebSerial.tsx  input.tsx  webserial.tsx
src/components/AdvancedDropdown/: index.tsx
src/components/AppSettings/: DeveloperSettings.tsx  DeviceConfig.tsx  FlashFirmware.tsx  NetworkSettings.tsx  index.css
src/components/AppUpdater/: index.tsx  styles.css
src/components/Button/: index.tsx  styles.css
src/components/Card/: index.tsx
src/components/Checkbox/: Index.tsx  index.stories.tsx  index.tsx
src/components/ComingSoon/: index.tsx
src/components/ConnectionStatus/: Index.tsx  index.tsx
src/components/ContextMenu/: index.tsx  styles.css
src/components/Counter/: Index.tsx
src/components/DashboardHeader/: index.tsx
src/components/DevTools/: Devtools.tsx  index.tsx
src/components/Footer/: Footer.tsx  index.stories.tsx  index.tsx
src/components/Header/: index.stories.tsx  index.tsx  styles.css
src/components/Modal/: Index.tsx  index.tsx
src/components/ModalHeader/: Index.tsx
src/components/NavItem/: index.tsx
src/components/NetworkBars/: index.stories.tsx  index.tsx
src/components/Notifications/: index.tsx
src/components/PortDropdown/: index.tsx
src/components/ProgressBar/: ProgressBar.tsx  index.stories.tsx  index.tsx  styles.css
src/components/SelectNetwork/: SelectNetwork.tsx  index.tsx
src/components/Selection/: index.tsx  styles.css
src/components/Sidebar/: index.tsx
src/components/Slider/: Index.tsx
src/components/SwipeAnimation/: index.stories.tsx  index.tsx
src/components/Titlebar/: Titlebar.tsx  index.tsx
src/components/Toast/: index.stories.tsx  index.tsx
src/components/Tooltip/: index.tsx
src/components/Typography/: index.stories.tsx  index.tsx
src/components/Wrapper/: Index.tsx
src/containers/404/: [...404].tsx
src/containers/AdvancedSettings/: index.tsx
src/containers/BoardImportWizard/: index.tsx
src/containers/ConfigureBoardWizard/: index.tsx
src/containers/Dashboard/: index.tsx
src/containers/FlashFirmware/: FlashFirmware.tsx  index.tsx
src/containers/FlashWizard/: ChangeDeviceModeWizard.tsx  FlashProcessWizard.tsx  SelectModeWizard.tsx  SelectPortWizard.tsx  SetupProcessWizard.tsx  TerminalProcessWizard.tsx  WiredProcessWizard.tsx  WirelessProcessWizard.tsx  index.tsx
src/containers/Header/: Header.tsx  index.tsx
src/containers/Home/: Index.tsx
src/containers/ManageBoard/: ManageBoard.tsx  index.tsx
src/containers/ManageNetwork/: ManageNetwork.tsx  index.tsx
src/containers/Modal/: ApModeModal.tsx  Index.tsx
src/containers/Modals/: ApMode.tsx  ApModeModal.tsx  ApModeModalContainer.tsx  BeforeFlashing.tsx  BeforeFlashingContainer.tsx  BeforeFlashingModal.tsx  BeforeSelectBoard.tsx  BeforeSelectBoardContainer.tsx  CloseApp.tsx  DevtoolsModal.tsx  EstablishConnection.tsx  Index.tsx  InstallOpenirisContainer.tsx  SelectPortModal.tsx  SelectboardModal.tsx  UpdateNetwork.tsx  UpdaterModal.tsx  WifiModalcontainer.tsx  index.tsx
src/containers/OperatingSystem/: Index.tsx
src/containers/Settings/: index.tsx
src/containers/SetupWizard/: Index.tsx
src/containers/Sidebar/: Index.tsx
src/containers/Terminal/: index.tsx
src/containers/TrackerDashboard/: index.tsx
src/containers/Welcome/: Index.tsx  index.tsx
src/esp/: api.ts  commands.ts  espApiCore.ts  espCore.ts  index.test.ts  index.ts  utils.ts
src/esp/interfaces/: enums.ts  interfaces.ts  types.ts
src/logger/: index.test.ts  index.ts  loggerApi.ts  loggerCore.ts
src/pages/: AppSettings.tsx
src/pages/APMode/: APMode.tsx
src/pages/BoardImportWizard/: index.tsx
src/persistenStore/: index.test.ts  index.ts
src/routes/: Routes.tsx  index.tsx
src/static/: endpoints.ts  index.ts  regex.ts
src/styles/: docs-imports.css  header-wrapper.css  imports.css  index.css  scrollbar.css  slider.css  titlebar.css  tooltip.css
src/toaster/: index.tsx
src/utils/: index.test.ts  index.ts
src/views/: AppSettings.tsx
src/watchers/: index.ts  loadPersistentStore.ts  persistentStore.ts  state.ts
(+255 files in other folders)
