[project]
name = "firmwareflashingtool"
version = "1.7.1-beta.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "bumpver>=2025.1131",
]

[bumpver]
current_version = "1.7.1-beta.1"
version_pattern = "MAJOR.MINOR.PATCH[-TAG[.NUM]]"
tag_message = "v{new_version}"
commit = false
tag = false
push = false

[bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"package.json" = [
    '"version": "{version}"',
]
"src-tauri/Cargo.toml" = [
    'version = "{version}" # bumpver:version',
]
"src-tauri/Cargo.lock" = [
    'version = "{version}" # bumpver:version',
]
"src-tauri/tauri.conf.json" = [
    '"version": "{version}"',
]