[package]
name = "firmware_flashing_tool"
version = "1.1.0"
description = "A tool to flash the firmware of the EyeTrackVR device."
authors = ["DaOfficialWizard"]
license = "MIT"
repository = "https://github.com/RedHawk989/EyeTrackVR"
default-run = "firmware_flashing_tool"
edition = "2021"
rust-version = "1.69"

[dependencies]
serde_json = "1.0"
zip-extract = "0.1.2"
command-group = "2.1.0"

[dependencies.reqwest]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tauri]
workspace = true

[dependencies.log]
workspace = true

[dependencies.specta]
workspace = true

[dependencies.dialoguer]
workspace = true

[dependencies.tauri-specta]
workspace = true

[dependencies.tauri-plugin-request-client]
path = "src/lib/api"

[dependencies.tauri-plugin-window-state]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-single-instance]
git = "https://github.com/tauri-apps/tauri-plugin-single-instance/"
branch = "dev"

[dependencies.tauri-plugin-upload]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tokio]
version = "1"
features = ["full"]

[workspace]
members = ["src/lib/api", "src/lib/util"]

[workspace.dependencies]
dialoguer = "0.11.0"
log = "0.4.20"

[workspace.dependencies.reqwest]
version = "0.11"
features = ["json", "rustls-tls"]

[workspace.dependencies.serde]
version = "1.0.188"
features = ["derive"]

[workspace.dependencies.specta]
version = "2.0.0-rc.5"
features = ["functions", "tauri"]

[workspace.dependencies.tauri-specta]
version = "2.0.0-rc.2"
features = ["javascript", "typescript"]

[workspace.dependencies.tauri]
version = "1.4.1"
features = ["process-exit", "protocol-asset", "fs-all", "dialog-all", "http-all", "icon-ico", "notification-all", "os-all", "path-all", "process-relaunch", "shell-open", "system-tray", "window-center", "window-close", "window-create", "window-hide", "window-maximize", "window-minimize", "window-request-user-attention", "window-set-decorations", "window-set-focus", "window-set-fullscreen", "window-set-position", "window-set-resizable", "window-set-size", "window-set-title", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
updater = ["tauri/updater"]

[build-dependencies.tauri-build]
version = "1.4.1"
features = []

[profile]
[profile.dev]
debug = 0

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
