[package]
name = "etvr-firmware-flasher-tool"
version = "2.0.0" # bumpver:version
description = "A Tauri App"
authors = [
  "DaOfficialWizard",
  "Luckmer",
  "Lorow",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "etvr_firmware_flasher_tool_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib",
]

[build-dependencies]
tauri-build = { version = "2", features = [
] }

[dependencies]
tauri = { version = "2", features = [
  "protocol-asset",
  "tray-icon",
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = [
  "derive",
] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-upload = "2"
tokio = "1.49.0"
log = "0.4.29"
zip-extract = "0.4.1"
zip = "8.1.0"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"


[dependencies.tauri-plugin-esp]
path = "src/lib/esp"

[workspace]
members = [
  "src/lib/esp",
]


[workspace.dependencies]
dialoguer = "0.11.0"
log = "0.4.21"
tauri = { version = "2", features = [
  "protocol-asset",
  "tray-icon",
] }


[workspace.dependencies.reqwest]
version = "0.11"
features = [
  "json",
  "rustls-tls",
]


[workspace.dependencies.serde]
version = "1.0.197"
features = [
  "derive",
]
