[package]
name = "tauri-plugin-request-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etvr-utils = { path = "../util" }
thiserror = "1"
serde = { workspace = true }
specta = { workspace = true }
tauri = { workspace = true }
tauri-specta = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
