[package]
name = "tauri-plugin-esp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { workspace = true }
serde_json = "1.0.128"
tauri = { workspace = true }
log = { workspace = true }
serialport = { version = "4.5.0", features = ["serde"] }
espflash = { version = "3.1.1", default-features = false, features = ["serialport"] }
